welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: not found: value x
    x=x+1
    ^Methods:6: error: not found: value x
forward(x)
        ^