welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {do {
    avance()
    x=x+1
} while (!estSurBiscuit)
prendBiscuit
forward(x)
poseBiscuit
}

for (i <- 1 to 7) {
	val x=0
    goAndGet();
    right();
    forward();
    left();
}
